; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/gpio/extr_gpiobus.c_gpiobus_free_ivars.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/gpio/extr_gpiobus.c_gpiobus_free_ivars.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gpiobus_ivar = type { i64, i32* }

@M_DEVBUF = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gpiobus_free_ivars(%struct.gpiobus_ivar* %0) #0 {
  %2 = alloca %struct.gpiobus_ivar*, align 8
  store %struct.gpiobus_ivar* %0, %struct.gpiobus_ivar** %2, align 8
  %3 = load %struct.gpiobus_ivar*, %struct.gpiobus_ivar** %2, align 8
  %4 = getelementptr inbounds %struct.gpiobus_ivar, %struct.gpiobus_ivar* %3, i32 0, i32 1
  %5 = load i32*, i32** %4, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %15

7:                                                ; preds = %1
  %8 = load %struct.gpiobus_ivar*, %struct.gpiobus_ivar** %2, align 8
  %9 = getelementptr inbounds %struct.gpiobus_ivar, %struct.gpiobus_ivar* %8, i32 0, i32 1
  %10 = load i32*, i32** %9, align 8
  %11 = load i32, i32* @M_DEVBUF, align 4
  %12 = call i32 @free(i32* %10, i32 %11)
  %13 = load %struct.gpiobus_ivar*, %struct.gpiobus_ivar** %2, align 8
  %14 = getelementptr inbounds %struct.gpiobus_ivar, %struct.gpiobus_ivar* %13, i32 0, i32 1
  store i32* null, i32** %14, align 8
  br label %15

15:                                               ; preds = %7, %1
  %16 = load %struct.gpiobus_ivar*, %struct.gpiobus_ivar** %2, align 8
  %17 = getelementptr inbounds %struct.gpiobus_ivar, %struct.gpiobus_ivar* %16, i32 0, i32 0
  store i64 0, i64* %17, align 8
  ret void
}

declare dso_local i32 @free(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
